# CAFI-product

./: .gitignore  Dockerfile  NGROK_HOSTING_GUIDE.md  QUICK_NGROK_SETUP.md  QUICK_START.md  README.md  app.py  ibm-orchestrate-agent.yaml  ibm-product-support-agent.yaml  product-catalog-api-openapi.yaml  test_confidence_manual.py
config/: requirements.txt
data/: Product_Match_Dictionary_Watson.xlsx  product_match_dictionary.json
docs/: CONFIDENCE_SCORING.md  CONFIDENCE_SCORING_COMPARISON.md  IMPROVEMENTS.md
docs/deployment/: AGENT_DEPLOYMENT.md  BUILD_AND_DEPLOY.md  OPENSHIFT_DEPLOYMENT.md  OPENSHIFT_NGROK_DEPLOYMENT.md  OPENSHIFT_WITH_NGROK_SIDECAR.md  create-deployment.sh  deploy-to-openshift.sh  deploy-with-ngrok.sh  fix-image-pull.sh  openshift-deploy.sh  openshift-deployment-route.yaml  openshift-deployment.yaml  openshift-ngrok-sidecar.yaml
docs/troubleshooting/: TROUBLESHOOTING.md
src/: __init__.py
src/api/: __init__.py  app.py
src/api/models/: __init__.py  response.py
src/api/routes/: __init__.py  health.py  products.py  search.py
src/core/: __init__.py  confidence_scorer.py  matcher.py  matcher_enhanced.py
src/utils/: __init__.py  config.py  logger.py
tests/: README.md  __init__.py  test_api.py  test_confidence_scorer.py  test_matcher.py
tests/automatedTest/: .coveragerc  .pre-commit-config.yaml  AUTOMATED_TESTING.md  README.md  pyproject.toml  pytest.ini
tests/automatedTest/.github/workflows/: test.yml
tests/automatedTest/scripts/: run_tests.ps1  run_tests.sh  setup_testing.sh
tests/watson_orchestrate/: .gitignore  INSTALL.md  QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  __init__.py  conftest.py  diagnose_auth.py  requirements.txt  run_quick_test.py  run_watson_tests.ps1  run_watson_tests.py  run_watson_tests.sh  test_auth_fix.py  test_watson_orchestrate.py
watson-orchestrate/: DEPLOYMENT_GUIDE.md  README.md  deploy-to-orchestrate.py  orchestrate-config.json  product-search-skill.yaml  quick-start.md  test-integration.sh
